--- a/index.html
+++ b/index.html
@@ -8,6 +8,25 @@
         <!--navigation-->
         <header>
         <h1>RUN BUDDY</h1>
+        <nav>
+            <!-- Unordered list element-->
+            <ul>
+                <!--listed item element-->
+                <li>
+                    <!--Anchor Elemenmt-->
+                    <a href="#what-we-do">What WeDo</a>
+                </li>
+                <li>
+                    <a href="what-you-do"> What You Do</a>
+                </li>
+                <li>
+                    <a href="#your-trainers"> Your Trainers</a>
+                </li>
+                <li>
+                    <a href="reach-out">Reach Out</a>
+                </li>
+            </ul>
+        </nav>
         </header>
         
         <!--hero/Jumbotron -->
