--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8"/>
+        <link rel="stylesheet" href="./assets/css/style.css"  />
         <title>Run Buddy</title>
     </head>
     <body>
@@ -16,7 +17,7 @@
                 <!--listed item element-->
                 <li>
                     <!--Anchor Elemenmt-->
-                    <a href="#what-we-do">What WeDo</a>
+                    <a href="#what-we-do">What We Do</a>
                 </li>
                 <li>
                     <a href="what-you-do"> What You Do</a>
