--- a/index.html
+++ b/index.html
@@ -34,7 +34,25 @@
         
         <!--hero/Jumbotron -->
         <section>
-
+            <div>
+                <h3>Get Started Today</h3>
+                <P> Fill out this form and one of our trainers will schedule a consult</P>
+                <form>
+                    <label for="name">Enter full name:</label>
+                    <input tpye="text" placeholder="Your Name" name="name" id="name"/>
+                    <label for="email">Enter email address:</label>
+                    <input type="text" placeholder="Email Address" name="email" id="email" />
+                    <label for="phone">Enter a telephone number:</label>
+                    <input type="text" placeholder="Phone Number" name="phone" id="phone"/>
+                    <p>
+                        Have you worked with a trainer before?
+                        <input type="radio" name="trainer-confrim" id="trainer-yes"  />
+                        <label for="trainer-yes">yes</label>
+                        <input type="radio"  name="trainer-confrim" id="trainer-no" />
+                        <label for="trainer-no">No</label>
+                    </p>
+                </form>
+            </div>
         </section>
 
         <!--"what we do" section-->
