--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <p>
                         Have you worked with a trainer before?
                         <input type="radio" name="trainer-confrim" id="trainer-yes"  />
-                        <label for="trainer-yes">yes</label>
+                        <label for="trainer-yes">Yes</label>
                         <input type="radio"  name="trainer-confrim" id="trainer-no" />
                         <label for="trainer-no">No</label>
                     </p>
