--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
                     <a href="#what-we-do">What We Do</a>
                 </li>
                 <li>
-                    <a href="what-you-do"> What You Do</a>
+                    <a href="#what-you-do"> What You Do</a>
                 </li>
                 <li>
                     <a href="#your-trainers"> Your Trainers</a>
                 </li>
                 <li>
-                    <a href="reach-out">Reach Out</a>
+                    <a href="#reach-out">Reach Out</a>
                 </li>
             </ul>
         </nav>
@@ -65,13 +65,39 @@
         </section>
 
         <!--"what we do" section-->
-        <section> 
+        <section id="what-we-do"> 
             <h2>What We Do</h2>
+            <p>
+                butcher selfies chambray shabby chic gentryify readymade yrEcho ParkXOX Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
+            </p>
         </section>
 
         <!--"what you do section"-->
-        <section> 
+        <section id="what-you-do"> 
             <h2>What You Do</h2>
+            <div>
+                <img src="./assets/images/step-1.svg"  alt="" />
+                <h3>Step 1: Fill out the Form Above.</h3>
+                <p> You're already here, so why not?</p>
+            </div>
+
+            <div>
+                <img src="./assets/images/step-2.svg" alt="" />
+                <h3>Step 2: Consult with One of Our Trainers.</h3>
+                <p> Are you here to build muscle, lose weight, or just feel good?</p>
+            </div>
+
+            <div>
+                <img src="./assets/images/step-3.svg" alt="" />
+                <h3>Step 3:Get Running.</h3>
+                <p>Hit the ground running (literally) onceyour trainer lays out your plan.</p>
+            </div>
+
+            <div>
+                <img src="./assets/images/step-4.svg" alt="" />
+                <h3>Step 4: See Results.</h3>
+                <p>Bi-weekly checkins withyour trainer will keep you focused.</p>
+            </div>
         </section>
 
         <!--"meet the Trainers" section-->
