half-way lesson 5

--- a/index.html
+++ b/index.html
@@ -101,13 +101,17 @@
         </section>
 
         <!--"meet the Trainers" section-->
-        <section>
-            <h2>Meet The Trainers</h2>
+        <section id="your-trainers">
+            <h2 class="section-title primary-border">
+                Meet The Trainers
+            </h2>
         </section>
 
         <!--"reach out" section-->
-        <section>
-            <h2>Reach Out</h2>
+        <section id="reach-out">
+            <h2 class="section-title primary-border">
+                Reach Out
+            </h2>
         </section>
 
         <!--Footer-->
