trainer sections added

--- a/index.html
+++ b/index.html
@@ -101,10 +101,40 @@
         </section>
 
         <!--"meet the Trainers" section-->
-        <section id="your-trainers">
+        <section class="trainers" id="your-trainers">
             <h2 class="section-title primary-border">
                 Meet The Trainers
             </h2>
+            <article class="trainer">
+                <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron"/>
+                <div class="trainer-bio text-left">
+                    <h3>Arron Stephens</h3>
+                    <h4>Speed / Strength</h4>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate, molestias eligendi ducimus, rem consequatur reiciendis perspiciatis iste totam modi sit debitis rerum. Officiis laudantium ratione facilis sapiente corrupti numquam veritatis?
+                    </p>
+                </div>
+            </article>
+            <article class="trainer">
+                <div class="trainer-bio text-right">
+                    <h3>Joanna Gill</h3>
+                    <h4>Endurance</h4>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima, natus expedita. Minus fuga cum, ea dolorem voluptatum quo dolorum, quas eius accusamus incidunt, quisquam laborum possimus praesentium ut fugit necessitatibus!
+                    </p>
+                </div>
+                <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill in her workout clothes, ready to get running">
+            </article>
+            <article class="trainer">
+                <img src="./assets/images/trainer-3.jpg" alt="Harry The Headband Smith in his workout clothes, flexing those muscles with weights" />
+                <div class="trainer-bio text-left">
+                    <h3>Harry "The Headband" Smith</h3>
+                    <h4>Strength</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem perferendis deleniti sit, nam inventore et facilis debitis ipsam. Laudantium, molestias ullam reiciendis facere perferendis hic magnam atque! Quisquam, veritatis cumque.
+                    </p>
+                </div>
+            </article>
         </section>
 
         <!--"reach out" section-->
