--- a/index.html
+++ b/index.html
@@ -138,20 +138,17 @@
         </section>
 
         <!--"reach out" section-->
-        <section id="reach-out">
-            <h2 class="section-title primary-border">
+        <section class="contact" id="reach-out">
+            <h2 class= "section-title secondary-border">
                 Reach Out
             </h2>
             <div class="contact-info">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14100.213509037774!2d-81.8770663!3d27.93100885!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88dd3d8d7630a561%3A0xba7a0703590fc253!2s2225%20Bluebird%20Ave%2C%20Bartow%2C%20FL%2033830!5e0!3m2!1sen!2sus!4v1629396620031!5m2!1sen!2sus" 
-                width="400" 
-                height="400" 
                 style="border:0;" 
                 allowfullscreen="" 
                 loading="lazy">
                 </iframe>
-            </div>
-            <div>
+             <div>
                 <h3> Run Buddy</h3>
                 <p> 
                     Any questions or concerns before signing up?
@@ -164,7 +161,8 @@
                     12345 <br />
                     p: 555.RUN.BUDZ (555.786.2839) <br />
                     E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
-                </address>     
+                </address> 
+                </div>    
             </div>
         </section>
 
@@ -172,7 +170,7 @@
         <footer>
             <h2>❤️ Made with love by Run Buddy.</h2>
             <div>
-                <a href="#">Read Our Privacy Policy</a><br />
+                <a href="./privacy-policy.html">Read Our Privacy Policy</a><br />
                 &copy; 2019 Run Buddy, Inc.
             </div>
         </footer>
