add  content to hero, replace image

--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
         
         <!--hero/Jumbotron -->
         <section class="hero">
+            <div class="hero-cta">
+                <h2>Start Building Habits.</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus nemo explicabo esse eum rem quam consequuntur ex error. Consequatur blanditiis nesciunt quia nostrum debitis incidunt veniam eligendi beatae perspiciatis quod! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam cumque odio ut consectetur facere enim? Architecto nam odio facere ipsa consequatur nihil cum repudiandae maiores sequi sed quibusdam, laboriosam recusandae.
+                </p>
+            </div>
             <div class="hero-form">
                 <h3>Get Started Today</h3>
                 <P> Fill out this form and one of our trainers will schedule a consult</P>
