--- a/index.html
+++ b/index.html
@@ -72,45 +72,85 @@
 
         <!--"what we do" section-->
         <section id="what-we-do" class="intro"> 
-            <h2 class="section-title primary-border">What We Do</h2>
-            <p>
+
+            <div class="flex-row">
+             <h2 class="section-title primary-border">What We Do</h2>
+            </div>
+
+            <div class="flew-row">
+              <p>
                 butcher selfies chambray shabby chic gentryify readymade yrEcho ParkXOX Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
-            </p>
+              </p>
+            </div>
+
         </section>
 
         <!--"what you do section"-->
         <section id="what-you-do" class="steps"> 
+            <div class="flex-row">
             <h2 class="section-title secondary-border">What You Do</h2>
-            <div>
-                <img src="./assets/images/step-1.svg"  alt="" />
-                <h3>Step 1: <span>Fill out the Form Above.</span></h3>
-                <p> You're already here, so why not?</p>
+            </div>
+            <div class="step">
+                <h3>Step 1.</h3>
+                <div class="step-info">
+                  <div class="step-img">
+                    <img src="./assets/images/step-1.svg" alt="" />
+                  </div>
+                  <div class="step-text">
+                    <h4>Fill Out The Form Above</h4>
+                    <p>You're already here, so why not?</p>
+                  </div>
+                </div>
             </div>
 
-            <div>
-                <img src="./assets/images/step-2.svg" alt="" />
-                <h3>Step 2: <span>With One of Our Trainers.</span></h3>
-                <p> Are you here to build muscle, lose weight, or just feel good?</p>
+            <div class="step">
+                <h3>Step 2:</h3>
+                <div class="step-info"> 
+                    <div class="step-img">
+                        <img src="./assets/images/step-2.svg" alt="" />
+                     </div>
+                     <div class="step-text">
+                      <h4>With One of Our Trainers. </h4>
+                      <p> Are you here to build muscle, lose weight, or just feel good?</p>
+                    </div>
+                 </div>   
             </div>
 
-            <div>
-                <img src="./assets/images/step-3.svg" alt="" />
-                <h3><span>Step 3:Get Running.</span></h3>
-                <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
+            <div class="step">
+                <h3>Step 3.</h3>
+                <div class="step-info">
+                  <div class="step-img">
+                    <img src="./assets/images/step-3.svg" alt="" />
+                  </div>
+                  <div class="step-text">
+                    <h4>Get Running</h4>
+                    <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
+                  </div>
+                </div>
             </div>
 
-            <div>
-                <img src="./assets/images/step-4.svg" alt="" />
-                <h3>Step 4: <span>See Results.</span></h3>
-                <p>Bi-weekly checkins withyour trainer will keep you focused.</p>
+            <div class="step">
+                <h3>Step 4.</h3>
+                <div class="step-info">
+                  <div class="step-img">
+                    <img src="./assets/images/step-4.svg" alt="" />
+                  </div>
+                  <div class="step-text">
+                    <h4>See Results</h4>
+                    <p>Bi-weekly checkins withyour trainer will keep you focused.</p>
+                  </div>
+                </div>
             </div>
+
         </section>
 
         <!--"meet the Trainers" section-->
         <section class="trainers" id="your-trainers">
+            <div class="flex-box">
             <h2 class="section-title primary-border">
                 Meet The Trainers
             </h2>
+            </div>
             <article class="trainer">
                 <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron"/>
                 <div class="trainer-bio text-left">
@@ -145,9 +185,11 @@
 
         <!--"reach out" section-->
         <section class="contact" id="reach-out">
+            <div class="flex-box">
             <h2 class= "section-title secondary-border">
                 Reach Out
             </h2>
+            </div>
             <div class="contact-info">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14100.213509037774!2d-81.8770663!3d27.93100885!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88dd3d8d7630a561%3A0xba7a0703590fc253!2s2225%20Bluebird%20Ave%2C%20Bartow%2C%20FL%2033830!5e0!3m2!1sen!2sus!4v1629396620031!5m2!1sen!2sus" 
                 style="border:0;" 
@@ -174,7 +216,7 @@
                     Let us know and we'll be happy to talk to you!
                 </p>
                 <address>
-                    55 Main Stree <br />
+                    55 Main Street <br />
                     Some Town, Ca <br />
                     12345 <br />
                     p: 555.RUN.BUDZ (555.786.2839) <br />
